# tinydft

./: .cardboardlint.yml  .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  .pycodestylerc  .pylintrc  .roberto.yaml  .travis.yml  .yamllint  AUTHORS.md  CHANGELOG.md  HEADER  README.md  README.rst  REUSE.toml  conftest.py  mypy.ini  program_evn.py  program_mendelejev.py  pyproject.toml  test_tinybasis.py  test_tinydft.py  test_tinygrid.py  tinybasis.py  tinydft.py  tinygrid.py
.github/: requirements-old.txt
.github/scripts/: extract-notes.sh
.github/workflows/: pytest.yaml  release.yaml
src/tinydft/: __init__.py  atom.py  basis.py  demo_evn.py  demo_mendelejev.py  dft.py  grid.py
test_tinybasis/: test_integral_regression.csv
test_tinydft/: test_atom_101_.csv  test_atom_111_.csv  test_atom_11_.csv  test_atom_121_.csv  test_atom_1_.csv  test_atom_21_.csv  test_atom_31_.csv  test_atom_41_.csv  test_atom_51_.csv  test_atom_61_.csv  test_atom_71_.csv  test_atom_81_.csv  test_atom_91_.csv
tests/: conftest.py  test_tinybasis.py  test_tinydft.py  test_tinygrid.py
tests/test_tinydft/: test_atom_111_.csv  test_atom_21_.csv  test_atom_61_.csv  test_atom_71_.csv  test_atom_81_.csv
