[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TinyDFT"
authors = [
  { name="Toon Verstraelen", email="toon.verstraelen@ugent.be" },
]
description = "Minimalistic atomic DFT code."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
]
dependencies = [
    # Ensure changes to these dependencies are reflected in .github/requirements-old.txt
    "numpy>=1.23.5,<2.0.0",
    "scipy>=1.11.1",
    "matplotlib>=3.4.3",
    "autograd>=1.2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-regressions",
    "pandas"
]

[project.scripts]
tinydft-demo-evn = "tinydft.demo_evn:main"
tinydft-demo-mendelejev = "tinydft.demo_mendelejev:main"

[tool.pytest.ini_options]
addopts = "-vv -W error --cov=src/tinydft --cov-report=term-missing -n auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "A", "B", "BLE", "C4", "E", "EXE", "F", "I", "ICN", "ISC", "N", "NPY", "PERF", "PIE",
    "PL", "PT", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TRY", "UP", "W"
]
ignore = [
    "ISC001",  # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
    "PLR0904",  # https://docs.astral.sh/ruff/rules/too-many-public-methods/
    "PLR0911",  # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912",  # https://docs.astral.sh/ruff/rules/too-many-branches/
    "PLR0913",  # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0914",  # https://docs.astral.sh/ruff/rules/too-many-locals/
    "PLR0915",  # https://docs.astral.sh/ruff/rules/too-many-statements/
    "PLR0916",  # https://docs.astral.sh/ruff/rules/too-many-boolean-expressions/
    "PLR0917",  # https://docs.astral.sh/ruff/rules/too-many-positional/
    "PLR2004",  # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "PT011",  # https://docs.astral.sh/ruff/rules/pytest-raises-too-broad/
    "TRY003",  # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
]

[tool.setuptools_scm]
write_to = "src/tinydft/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
